feat: finish auth module with alot of pain
