# src/modules/user/user.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+
+import userController from './user.controller';
+
+const router = Router();
+
+router.get('/whoami', userController.whoami);
+
+export default router;
